--- a/disposiçãoA.css
+++ b/disposiçãoA.css
@@ -1,3 +1,5 @@
+@import url('Index.css');
+
 .txts{
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
